syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.persistencetier.protobuf";

package foodPack;


message EmptyFoodPack{

}

message FoodPackSellerRequest{
  int32 cvr = 1;
}


message FoodPackRequest{
  int32 id = 1;
}

message DateTimeFoodPack {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
  int32 hour = 4;
  int32 minutes = 5;
}

message CreateFoodPackRequest {
  int32 cvr = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  bool is_prepared = 5;
  DateTimeFoodPack startTime = 6;
  DateTimeFoodPack endTime = 7;
  double price = 8;
}

message FoodPackResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  bool is_prepared = 5;
  DateTimeFoodPack startTime = 6;
  DateTimeFoodPack endTime = 7;
  double price = 8;
}

message SearchFoodPacks{
  bool is_prepared = 1;
  string title = 2;
  string type = 3;
  double price = 4;
  int32 postcode = 5;

}

service FoodPackService {
  rpc createFoodPack(CreateFoodPackRequest) returns (FoodPackResponse);
  rpc getFoodPackById(FoodPackRequest) returns (FoodPackResponse);
  rpc getFoodPacksBySellerCvr(FoodPackSellerRequest) returns (stream FoodPackResponse);
  rpc deleteFoodPackById(FoodPackRequest) returns (FoodPackResponse);
  rpc searchFoodPacks(SearchFoodPacks) returns (stream FoodPackResponse);
  rpc getAllFoodPacks(EmptyFoodPack) returns (stream FoodPackResponse);
}

